--- a/src/main/java/App/AppModificada.form
+++ b/src/main/java/App/AppModificada.form
@@ -26,7 +26,7 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="backgroun" alignment="0" pref="1036" max="32767" attributes="0"/>
+          <Component id="backgroun" alignment="0" pref="1042" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
@@ -50,26 +50,24 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" attributes="0">
-                  <Component id="menu" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Component id="Contenido" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="32767" attributes="0"/>
+                  <EmptySpace min="276" pref="276" max="-2" attributes="0"/>
+                  <Component id="Contenido" min="-2" pref="740" max="-2" attributes="0"/>
               </Group>
+              <Component id="menu" min="-2" max="-2" attributes="0"/>
               <Group type="102" attributes="0">
-                  <EmptySpace min="-2" pref="268" max="-2" attributes="0"/>
-                  <Component id="Barra" pref="1462" max="32767" attributes="0"/>
+                  <EmptySpace min="-2" pref="262" max="-2" attributes="0"/>
+                  <Component id="Barra" pref="780" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Component id="menu" pref="652" max="32767" attributes="0"/>
               <Group type="102" attributes="0">
-                  <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
-                  <Component id="Barra" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
+                  <EmptySpace min="136" pref="136" max="-2" attributes="0"/>
                   <Component id="Contenido" max="32767" attributes="0"/>
               </Group>
+              <Component id="menu" pref="652" max="32767" attributes="0"/>
+              <Component id="Barra" min="-2" pref="84" max="-2" attributes="0"/>
           </Group>
         </DimensionLayout>
       </Layout>
@@ -77,7 +75,7 @@
         <Container class="javax.swing.JPanel" name="menu">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="29" green="29" red="cc" type="rgb"/>
+              <Color blue="29" green="33" red="29" type="rgb"/>
             </Property>
             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[270, 640]"/>
@@ -87,11 +85,6 @@
           <Layout>
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" attributes="0">
-                      <EmptySpace min="-2" pref="109" max="-2" attributes="0"/>
-                      <Component id="Icono" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="879" max="32767" attributes="0"/>
-                  </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="VerPartidasTerminadasBoton" alignment="0" min="-2" pref="270" max="-2" attributes="0"/>
@@ -105,14 +98,19 @@
                       </Group>
                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                   </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="90" max="-2" attributes="0"/>
+                      <Component id="Icono" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
+                  </Group>
               </Group>
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
-                      <EmptySpace min="-2" pref="58" max="-2" attributes="0"/>
-                      <Component id="Icono" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="48" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="17" max="-2" attributes="0"/>
+                      <Component id="Icono" min="-2" pref="71" max="-2" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="Separador" min="-2" pref="31" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="64" max="-2" attributes="0"/>
                       <Component id="EmpezarPartidaBoton" min="-2" pref="60" max="-2" attributes="0"/>
@@ -120,7 +118,7 @@
                       <Component id="VerPartidasTerminadasBoton" min="-2" pref="60" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="VerPartidasSinTerminarBoton" min="-2" pref="60" max="-2" attributes="0"/>
-                      <EmptySpace pref="125" max="32767" attributes="0"/>
+                      <EmptySpace pref="175" max="32767" attributes="0"/>
                       <Component id="SalirBoton" min="-2" pref="60" max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -236,7 +234,7 @@
             <Component class="javax.swing.JLabel" name="Icono">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="2" name="C:\Users\DAW_M\Documents\NetBeansProjects\Juego-Batalla-Naval\src\main\img\barco-pirata (1).png"/>
+                  <Image iconType="2" name="C:\Users\mario\Documents\0A_DAM-III\1. Hundir La Flota MRA\Batalla_Naval_Cliente\src\main\img\barco-pirata (1).png"/>
                 </Property>
               </Properties>
             </Component>
@@ -245,7 +243,7 @@
         <Container class="javax.swing.JPanel" name="Barra">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="39" green="39" red="aa" type="rgb"/>
+              <Color blue="3d" green="66" red="3d" type="rgb"/>
             </Property>
             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[750, 90]"/>
@@ -258,11 +256,11 @@
                   <Group type="102" attributes="0">
                       <EmptySpace min="-2" pref="47" max="-2" attributes="0"/>
                       <Component id="GitHubTexto" min="-2" pref="128" max="-2" attributes="0"/>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <EmptySpace type="separate" min="-2" max="-2" attributes="0"/>
                       <Component id="textoEjercicio" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
-                      <Component id="emailTexto" max="32767" attributes="0"/>
-                      <EmptySpace min="-2" pref="852" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="36" max="-2" attributes="0"/>
+                      <Component id="emailTexto" pref="299" max="32767" attributes="0"/>
+                      <EmptySpace min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -276,7 +274,7 @@
                       </Group>
                       <EmptySpace min="45" max="32767" attributes="0"/>
                   </Group>
-                  <Component id="emailTexto" alignment="0" max="32767" attributes="0"/>
+                  <Component id="emailTexto" alignment="1" min="-2" pref="90" max="-2" attributes="0"/>
               </Group>
             </DimensionLayout>
           </Layout>
@@ -290,7 +288,7 @@
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="2" name="C:\Users\DAW_M\Documents\NetBeansProjects\Juego-Batalla-Naval\src\main\img\github.png"/>
+                  <Image iconType="2" name="C:\Users\mario\Documents\0A_DAM-III\1. Hundir La Flota MRA\Batalla_Naval_Cliente\src\main\img\github.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="marromagu"/>
                 <Property name="iconTextGap" type="int" value="10"/>
@@ -299,7 +297,7 @@
             <Component class="javax.swing.JLabel" name="emailTexto">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="Century Gothic" size="18" style="1"/>
+                  <Font name="Century Gothic" size="36" style="1"/>
                 </Property>
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
@@ -319,7 +317,7 @@
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="2" name="C:\Users\DAW_M\Documents\NetBeansProjects\Juego-Batalla-Naval\src\main\img\gmail_1.png"/>
+                  <Image iconType="2" name="C:\Users\mario\Documents\0A_DAM-III\1. Hundir La Flota MRA\Batalla_Naval_Cliente\src\main\img\gmail_1.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="mromagu2611@g.educaand.es"/>
                 <Property name="iconTextGap" type="int" value="10"/>
